--- a/html/meters.css
+++ b/html/meters.css
@@ -59,7 +59,7 @@ h3
 	float: left;
 	border:1px solid #888;
 	border-bottom-width: 0;
-	margin: 0;
+	margin: 0px 0px 0px 10px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
